--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 license = "MIT/Apache-2.0"
 description = "A library which provides helpers to manipulate bits and bit ranges."
 authors = ["José Miguel Sánchez García <jmi2k@openmailbox.org>"]
+repository = "https://github.com/jmi2k/bit-rs"
 
 [dependencies]
